# ic35link

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  THANKS  TODO  autogen.sh  configure.in
debian/: README.Debian  README.source  changelog  control  files  ic35link.doc-base.EX
debian/patches/: fix-formats  fix-label  gcc-build-workaround  series
doc/: Makefile.am  ic35mgr.txt  ic35sync.txt
doc/CVS/: Entries  Repository
src/: .cvsignore  Makefile.am  comio.c  comio.h  databin.c  dataio.c  dataio.h  datatxt.c  datavca.c  genproto.c  genproto.h  ic35frec.c  ic35frec.h  ic35log.sh  ic35mgr.c  ic35sync.c  mgrproto.c  mgrproto.h  mgrtrans.c  mgrtrans.h  port.h  synproto.c  synproto.h  syntrans.c  syntrans.h  util.c  util.h  vcaconv.c  vcc.c  vcc.h  vcc.y  vcutil.c  vcutil.h  vobject.c  vobject.h
src/CVS/: Entries  Repository  Root
