## Process this file with automake to produce Makefile.in
## $Id: Makefile.am,v 1.2 2001/02/19 01:10:46 tsch Rel $
## Copyright (C) 2001 Thomas Schulz
##
## automakefile for ic35link/doc

pkgdata_DATA =		\
	ic35sync.txt	\
	ic35mgr.txt

EXTRA_DIST = $(pkgdata_DATA)

if MAINTAINER_MODE
MAINTAINERCLEANFILES = Makefile.in
else
MAINTAINERCLEANFILES =
endif
